--- a/css/style.css
+++ b/css/style.css
@@ -964,6 +964,10 @@ ul.am-dropdown-content > li > a {
     text-align: center;
 }
 
+.item-continer-h4 {
+    text-align: center;
+}
+
 .technology-item-title .continue {
     margin: 0 auto;
     text-align: center;
